--- a/deployment.yml
+++ b/deployment.yml
@@ -23,7 +23,7 @@ spec:
     spec: # Pod spec
       containers:
       - name: amazon-container
-        image: fujjer/amazon:latest
+        image: fujjer/amazon:1
         ports:
         - containerPort: 3000
         
